<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recomendaciones"
            android:title="@string/recomendaciones"
            android:icon="@android:drawable/ic_menu_view" />
        <item
            android:id="@+id/nav_ayuda"
            android:title="@string/ayuda"
            android:icon="@android:drawable/ic_menu_info_details" />
        <item
            android:id="@+id/nav_acerca"
            android:title="@string/acercaDe"
            android:icon="@android:drawable/ic_menu_myplaces" />
        <item
            android:id="@+id/nav_mapa"
            android:title="@string/mapa"
            android:icon="@android:drawable/ic_dialog_map" />
        <item
            android:id="@+id/nav_volver"
            android:title="@string/volver"
            android:icon="@android:drawable/ic_media_previous" />
    </group>
</menu>
