<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="24dp"
    android:background="#F5F5F5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuevaCuenta"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginBottom="32dp"
            android:textColor="#333"/>

        <EditText
            android:id="@+id/etNombreReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombreUsu"
            android:textColor="@color/form_text"
            android:textColorHint="@color/form_hint"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/etCorreoReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correoUsu"
            android:autofillHints="emailAddress"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/form_text"
            android:textColorHint="@color/form_hint"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/etPassReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasenia"
            android:textColor="@color/form_text"
            android:textColorHint="@color/form_hint"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/etTelefonoReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tlfSMS"
            android:autofillHints="phone"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="@color/form_text"
            android:textColorHint="@color/form_hint"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/btnImportarContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/importar_contacto"
            android:layout_marginBottom="16dp" />

        <Switch
            android:id="@+id/switchAdminReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isAdmin"
            android:textSize="16sp"
            android:layout_marginBottom="32dp" />

        <Button
            android:id="@+id/btnGuardarRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardarReg"/>

    </LinearLayout>
</ScrollView>
