<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/textoAyuda1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ayudaTexto1"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textoAyuda2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/ayudaTexto2"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnVerVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ver_video" />
</LinearLayout>
