<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvAudioDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnAudioPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/reproducir" />

    <Button
        android:id="@+id/btnAudioPause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pausar" />

    <Button
        android:id="@+id/btnAudioStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detener" />
</LinearLayout>
