<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <VideoView
        android:id="@+id/videoPresentacion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp">

        <Button
            android:id="@+id/btnRetrocederVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retroceder_5" />

        <Button
            android:id="@+id/btnPausarVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/pausar" />

        <Button
            android:id="@+id/btnAdelantarVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adelantar_5" />
    </LinearLayout>
</LinearLayout>
